[tool.poetry]
name = "company-revenue-notifier"
version = "0.1.0"
description = ""
authors = ["seriaati <seria.ati@gmail.com>"]
license = "GPL v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
line-py = {git = "https://github.com/seriaati/line.py"}
tortoise-orm = {extras = ["asyncpg"], version = "^0.20.0"}
fake-useragent = "^1.3.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
