[tool.poetry]
authors = ["seriaati <seria.ati@gmail.com>"]
description = ""
license = "GPL v3.0"
name = "company-revenue-notifier"
package-mode = false
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
asyncpg = "^0.29.0"
beautifulsoup4 = "^4.12.2"
fake-useragent = "^1.3.0"
fastapi = "^0.104.1"
line-py = {git = "https://github.com/seriaati/line.py"}
python = "^3.11"
seria-library = {git = "https://github.com/seriaati/seria-library"}
tortoise-orm = "^0.20.0"
uvicorn = "^0.24.0.post1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
